# ChangeLog for www-apps/mythweb
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-apps/mythweb/ChangeLog,v 1.44 2007/08/25 23:54:52 beandog Exp $

*mythweb-0.20.2_p14282 (25 Aug 2007)

  25 Aug 2007; Steve Dibb <beandog@gentoo.org>
  +mythweb-0.20.2_p14282.ebuild:
  Version bump

*mythweb-0.20.1_p14269 (24 Aug 2007)

  24 Aug 2007; Doug Goldstein <cardoe@gentoo.org>
  +mythweb-0.20.1_p14269.ebuild:
  upstream fix for bug #183770

  15 Aug 2007; Doug Goldstein <cardoe@gentoo.org>
  mythweb-0.21_pre14151.ebuild:
  fixes after working with CharlieSu in #gentoo-mythtv

  14 Aug 2007; Doug Goldstein <cardoe@gentoo.org>
  mythweb-0.21_pre14151.ebuild:
  fix path to apache config file. install lighttpd config file as well.

*mythweb-0.21_pre14151 (10 Aug 2007)

  10 Aug 2007; Doug Goldstein <cardoe@gentoo.org>
  +mythweb-0.21_pre14151.ebuild:
  new rev bump. fix bug #184143

  10 Aug 2007; Doug Goldstein <cardoe@gentoo.org>
  -mythweb-0.20_p11671.ebuild, mythweb-0.20.1_p14146.ebuild:
  fix bug #188109. remove old version

  07 Aug 2007; Doug Goldstein <cardoe@gentoo.org>
  mythweb-0.20.1_p14146.ebuild:
  subversion packaging fix ups

  07 Aug 2007; Doug Goldstein <cardoe@gentoo.org>
  mythweb-0.20.1_p14146.ebuild:
  setting S for subversion builds is wrong

*mythweb-0.20.1_p14146 (07 Aug 2007)

  07 Aug 2007; Doug Goldstein <cardoe@gentoo.org> mythweb-0.20.1.ebuild,
  +mythweb-0.20.1_p14146.ebuild:
  stable 0.20.1 to match rest of MythTV. upstream fixes in new ebuild. use
  subversion builds.

*mythweb-0.21_pre13775 (28 Jun 2007)

  28 Jun 2007; Doug Goldstein <cardoe@gentoo.org>
  +files/postinstall-en-0.21.txt, -files/postinstall-en.txt,
  +mythweb-0.21_pre13775.ebuild:
  new version of mythweb trunk. fixes bug #175510.

*mythweb-0.20.1 (27 Apr 2007)

  27 Apr 2007; Doug Goldstein <cardoe@gentoo.org> +mythweb-0.20.1.ebuild:
  bump to 0.20.1 release

  23 Apr 2007; Doug Goldstein <cardoe@gentoo.org>